Solved some css glitches and improved dark mode

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -65,14 +65,10 @@
   background-color: rgb(189, 218, 196);
 }
 
-<<<<<<< Updated upstream
-.profileIcon{              
-=======
 .profileIcon{      
->>>>>>> Stashed changes
   border-radius: 150%;
   padding:10px;
-}
+} 
 
 @media (max-width: 62em) {
   .outside {
